wip/grafana/ge-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana-enterprise
  namespace: grafana-enterprise
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: grafana-enterprise
  serviceName: grafana-enterprise-headless
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 50Gi
  template:
    metadata:
      labels:
        app: grafana-enterprise
    spec:
      containers:
        - name: grafana-enterprise
          image: grafana/grafana-enterprise:8.3.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 9094
              name: gossip
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 3
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
            - name: grafana-config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: ldap-config
              mountPath: /etc/grafana/ldap.toml
              subPath: ldap.toml
            - name: grafana-enterprise-license
              mountPath: /etc/grafana/license.jwt
              subPath: license.jwt
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: ldap-config
          configMap:
            name: ldap-config
        - name: grafana-enterprise-license
          secret:
            secretName: grafana-enterprise-license
