wip/grafana/ge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-enterprise
  namespace: grafana-enterprise
spec:
  selector:
    app: grafana-enterprise
  ports:
    - name: http
      protocol: TCP
      port: 3000
    - name: gossip
      protocol: TCP
      port: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-enterprise-headless
  namespace: grafana-enterprise
spec:
  selector:
    app: grafana-enterprise
  clusterIP: None
